# aclock

./: .gitignore  README.md  aclock.py  aclock.service  default.gz.do  demo.py  demo2.py  install.yaml  prep-pi.sh  quick-update.sh  requirements.txt  run-aclock.sh  year.webp.do
image/: .gitignore  config.txt  firstboot.sh  pi.img.do
scd30/: .gitignore  Cargo.toml  sensor_demo.do
scd30/src/: i2c.rs  lib.rs
server/: .gitignore  Cargo.toml  all.do  clean.do  default.bin.do  hardware.bin.do  main.html  pkg.dir.do  server.bin.do  server.do  server.gz.do  video.bin.do
server/.cargo/: config.toml
server/src/: context.rs  drawing.rs  edge.rs  face.rs  led_displays.rs  lib.rs  main.rs  riseset.rs  simulator.rs  web.rs
server/src/atmosphere/: mod.rs  usgov.rs
tasks/: install-matrix.yaml  sysprep.yaml
