[package]
name = "scd30"
version = "0.1.0"
authors = ["Charles Eckman <charles@cceckman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "^1"
crc-any = "^2.3"

[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = { version = "0.4.0", features = ["i2c"] }

[[bin]]
name = "sensor_demo"
