[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["clock", "std"], default-features = false }
ctrlc = "3.4.5"
# TODO:
# Held back because rpi-led-matrix uses 0.3.3 specifically (!)
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
embedded-graphics-simulator = { version = "0.4.1", optional = true }
num_cpus = { version = "1.16.0", optional = true }
rs_ws281x = "0.5.1"
tempfile = { version = "3.13.0", optional = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
scd30 = { path = "../scd30/" }
linux-embedded-hal = { version = "0.4.0", default-features = false, features = ["i2c", "i2cdev"] }

[target.'cfg(target_arch="aarch64")'.dependencies]
rpi-led-matrix = {version = "0.4.0", features = ["embeddedgraphics"]}

[target.'cfg(not(target_arch="aarch64"))'.dependencies]
rpi-led-matrix = {version = "0.4.0", features = ["c-stubs", "embeddedgraphics"]}

[features]
# Enables the simulator output and disables the LED display output.
simulator = ["dep:embedded-graphics-simulator"]
# Enables generating video output from the simulator.
video = ["simulator", "dep:tempfile", "dep:num_cpus"]

# Enables downloading atmospheric data from US government sources:
# National Weather Service, AirNow, ...
atmo-usgov = []

default = ["video", "atmo-usgov"]

[[bin]]
name = "video"
required-features = ["video"]
