[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.38", features = ["clock", "std"], default-features = false }
ctrlc = { version = "3.4.5", optional = true }
# TODO:
# Held back because rpi-led-matrix uses 0.3.3 specifically (!)
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
embedded-graphics-simulator = { version = "0.4.1", optional = true }
num_cpus = { version = "1.16.0", optional = true }
rs_ws281x = { version = "0.5.1", optional = true }
tempfile = { version = "3.13.0", optional = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
scd30 = { path = "../scd30/", optional = true }
linux-embedded-hal = { version = "^0.4", default-features = false, features = ["i2c", "i2cdev"], optional = true }
embedded-hal = { version = "^1", optional = true }
web-sys = { version = "0.3.72", optional = true, features = ["CanvasRenderingContext2d", "ImageData", "console"] }
wasm-bindgen = { version = "0.2.95", optional = true }
js-sys = { version = "0.3.72", optional = true }

[target.'cfg(target_arch="aarch64")'.dependencies]
rpi-led-matrix = {version = "0.4.0", features = ["embeddedgraphics"], optional = true}

[target.'cfg(not(target_arch="aarch64"))'.dependencies]
rpi-led-matrix = {version = "0.4.0", features = ["c-stubs", "embeddedgraphics"], optional = true}

[features]
# Enables the "real hardware" access.
hardware = ["dep:num_cpus", "dep:rs_ws281x", "dep:linux-embedded-hal", "dep:embedded-hal", "dep:scd30" , "dep:rpi-led-matrix", "dep:ctrlc"]

# Enables the simulator output and disables the LED display output.
simulator = ["dep:embedded-graphics-simulator"]
# Enables generating video output from the simulator.
video = ["simulator", "dep:tempfile", "dep:num_cpus"]

default = ["video", "hardware", "web"]

# WASM support
web = ["dep:web-sys", "dep:wasm-bindgen", "dep:js-sys"]

[[bin]]
name = "video"
required-features = ["video"]

[[bin]]
name = "brightness"

[[bin]]
name = "hardware"
required-features = ["hardware"]

